--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#">Melani's view</a>
-              <a class="nav-link" href="#">Omar's view</a>
+              <a class="nav-link" href="vista_Omar.html">Omar's view</a>
               <a class="nav-link" href="#">Fer's view</a>
             </div>
           </div>
         </div>
       </nav>
-      <div class="container">
+      <div class="container ">
         <div class="row">
           <div class="col-12">
             <h1>Bienvenidos a nuestra prueba con Git</h1>
