--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#">Melani's view</a>
               <a class="nav-link" href="#">Omar's view</a>
-              <a class="nav-link" href="#">Fer's view</a>
+              <a class="nav-link" href="Vista_Fer.html">Fer's view</a>
             </div>
           </div>
         </div>
       </nav>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
