--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Georgie's view</a>
-              <a class="nav-link" href="georgie.html">Melani's view</a>
+              <a class="nav-link" href="georgie.html">Georgie's view</a>
+              <a class="nav-link" href="#">Melani's view</a>
               <a class="nav-link" href="#">Omar's view</a>
               <a class="nav-link" href="#">Fer's view</a>
             </div>
